# ai_private_workspace

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Open AI Private Workspace.command  README.md  REUSE.toml  SECURITY.md  docker-compose.yml  osv-scanner.toml  pytest.ini
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
backend/: Dockerfile  pyproject.toml  requirements-qdrant.txt  requirements.txt
brand/: README.md
docs/: AGENT_MCP_READINESS_TASK213.md  API_INVENTORY.md  ARCHITECTURE.md  BACKUP_RESTORE_RUNBOOK.md  BENCHMARKS.md  CERTIFICATION_AND_BADGES.md  CONFIGURATION.md  CONTINUE_MESSAGE.md  DESKTOP_STACK_AND_RUNTIME_CONTRACT.md  DESKTOP_SUPERVISOR_CONTRACT.md  DEVELOPMENT.md  FRONTEND_API_MAP.md  GITHUB_PUBLICATION_CHECKLIST.md  GITHUB_REPOSITORY_GUIDE.md  INSTALL_WALKTHROUGH.md  LLAMACPP_BACKEND_PLAN.md  LLAMACPP_BINARY_SETUP.md  LOCAL_DATA_SAFETY.md  LOCAL_RUNTIME_RUNBOOK.md  MACOS_APP_PACKAGE_FOUNDATION.md  MACOS_APP_PACKAGE_NEXT_STEPS.md  MACOS_BACKEND_RUNTIME_BUNDLE_PLAN.md  MACOS_LAUNCHER.md  MCP_AGENT_INTEGRATION.md  MCP_SETUP_UX.md  MODEL_CONTEXT_INDEXING_CLARITY_TASK227.md  MODEL_DOWNLOAD_EXECUTION_FOUNDATION.md  MODEL_DOWNLOAD_JOBS.md  MODEL_DOWNLOAD_MANAGER_PLAN.md  MODEL_INSTALL_APPROVAL_FLOW.md  NEXT_STEPS.md  README.md  (+41 more)
frontend/src-tauri/: .fuse_hidden0000001400000001  .fuse_hidden0000001400000002  .fuse_hidden00000b3400000001  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+1181 files in other folders)
