[package]
name = "ai-private-workspace"
version = "0.1.0"
description = "Local-first private AI workspace desktop shell"
authors = ["AI Private Workspace"]
edition = "2021"

[lib]
name = "ai_private_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
