[package]
name = "ai-private-workspace"
version = "0.1.146"
description = "Local-first AI Private Workspace desktop shell"
authors = ["Maks Tonkonozhenko"]
edition = "2021"

[lib]
name = "ai_private_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
# Pin time below newer releases that currently conflict with cookie 0.18.x on latest Rust toolchains.
time = "=0.3.36"
